--- a/index.html
+++ b/index.html
@@ -34,10 +34,121 @@
             </h2>
 
             <p class="no-margin">
-                Aprende de los expertos con las mejores recetas y concejos
+                Aprende de los expertos, con las mejores recetas y concejos.
             </p>
         </div>
     </header>
+
+    <div class="contenedor contenido-principal">
+        <main class="blog">
+            <h3>Nuestro Blog</h3>
+
+            <article class="entrada">
+                <div class="entrada__img">
+                    <img src="/blogdecafe_inicio/img/blog1.jpg" alt="">
+                </div>
+                <div class="entrada__contenido">
+                    <h4 class="no-margin">
+                        Tipos de Grano de Café
+                    </h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum repellat mollitia facere aut sed voluptas possimus molestiae amet praesentium dicta, beatae dolor earum tempora culpa ipsam, in nobis modi laborum.
+                    </p>
+                    <a href="entrada.html" class="boton boton__primario">Leer Entrada</a>
+                </div>
+            </article>
+
+            <article class="entrada">
+                <div class="entrada__img">
+                    <img src="/blogdecafe_inicio/img/blog2.jpg" alt="">
+                </div>
+                <div class="entrada__contenido">
+                    <h4 class="no-margin">
+                        3 deliciosas recetas de Café
+                    </h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum repellat mollitia facere aut sed voluptas possimus molestiae amet praesentium dicta, beatae dolor earum tempora culpa ipsam, in nobis modi laborum.
+                    </p>
+                    <a href="entrada.html" class="boton boton__primario">Leer Entrada</a>
+                </div>
+            </article>
+
+            <article class="entrada">
+                <div class="entrada__img">
+                    <img src="/blogdecafe_inicio/img/blog3.jpg" alt="">
+                </div>
+                <div class="entrada__contenido">
+                    <h4 class="no-margin">
+                        Beneficios del Café
+                    </h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum repellat mollitia facere aut sed voluptas possimus molestiae amet praesentium dicta, beatae dolor earum tempora culpa ipsam, in nobis modi laborum.
+                    </p>
+                    <a href="entrada.html" class="boton boton__primario">
+                        Leer Entrada
+
+                    </a>
+                </div>
+            </article>
+        </main>
+
+        <aside class="sidebar">
+            <h3>Nuestros Cursos & Talleres</h3>
+
+            <ul class="cursos no-padding">
+                <li class="widget-curso">
+                    <h4 class="no-margin">
+                        Técnicas para Extracción de Café
+                    </h4>
+
+                    <p class="widget-curso__label">
+                        Precio: <span class="widget-curso__info">Gratis</span>
+                    </p>
+                    <p class="widget-curso__label">
+                        Cupo: <span class="widget-curso__info">20</span>
+                    </p>
+                    <a href="entrada.html" class="boton boton__secundario">
+                        Mas Información
+
+                    </a>
+                </li>
+
+                <li class="widget-curso">
+                    <h4 class="no-margin">
+                        4 Recetas de Café para Principiantes
+                    </h4>
+
+                    <p class="widget-curso__label">
+                        Precio: <span class="widget-curso__info">Gratis</span>
+                    </p>
+                    <p class="widget-curso__label">
+                        Cupo: <span class="widget-curso__info">20</span>
+                    </p>
+                    <a href="entrada.html" class="boton boton__secundario">
+                        Mas Información
+
+                    </a>
+                </li>
+            </ul>
+        </aside>
+    </div>
+
+    <footer class="footer">
+        <div class="contenedor">
+            <div class="barra">
+                <a class="logo no-margin centrar-texto" href="index.html">
+                    <h1 class="logo__nombre no-margin">Blog<span class="logo__bold">DeCafé</span></h1>
+                </a>
+
+                <nav class="navegacion">
+                    <a href="nosotros.html" class="navegacion__enlace">Nosotros</a>
+                    <a href="cursos.html" class="navegacion__enlace">Cursos</a>
+                    <a href="contacto.html" class="navegacion__enlace">Contacto</a>
+                </nav>
+            </div>
+        </div>
+    </footer>
+
 
 
     
