pagina de contacto terminada

--- a/entrada.html
+++ b/entrada.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
-    <title>Nosotros</title>
+    <title>EntradaBlog</title>
 </head>
 <body>
 
@@ -41,19 +41,23 @@
     </header>
 
     <main class="contenedor">
-        <h3 class="centrar-texto">
-            Sobre Nosotros
-        </h3>
 
-        <div class="sobre-nosotros">
-            <div class="sobre-nosotros__imagen">
-                <img src="/blogdecafe_inicio/img/nosotros.jpg" alt="imagen nosotros">
-            </div>
-            <div class="sobre-nosotros__texto">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque consequatur, quasi ratione excepturi quod velit, maiores repellendus adipisci suscipit dolores sint illum, labore itaque perferendis vel ducimus in enim molestiae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis saepe nostrum a obcaecati ut voluptatum suscipit cumque necessitatibus nulla.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima, beatae quos delectus ipsam veniam, voluptate id tenetur magni quo iusto ducimus autem modi distinctio assumenda minus voluptatibus corrupti? Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-            </div>
+        <h3 class="centrar-texto">
+            Entrada de Blog
+        </h3>
+        
+        <div>
+            <img src="/blogdecafe_inicio/img/blog2.jpg" alt="blog imagen">
         </div>
+
+        <div>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro non quos cum delectus saepe fuga sequi nemo, similique iusto veniam cupiditate impedit et fugit, dolor illo hic culpa minima consequatur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto deleniti explicabo reprehenderit ea illo quos aliquid nisi, id ipsum excepturi, autem ad esse? Est nihil vitae perspiciatis, cum laboriosam minima.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis quam nostrum in, inventore asperiores repellat dignissimos error numquam maiores sunt quas dolores expedita ut voluptatibus quae ducimus ad. Beatae, deleniti!
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio quis fugiat aut necessitatibus voluptates amet beatae incidunt dolor. Reprehenderit explicabo nihil sequi libero recusandae dolores adipisci officiis optio ratione quisquam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum architecto nulla quo odit illo atque modi harum quisquam porro alias quas molestias consequatur aperiam, vero quam! Itaque nisi autem distinctio.
+            </p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit, recusandae accusamus nam cum suscipit veritatis, qui sint aut nisi totam mollitia? Doloribus quod vitae itaque voluptatum quam? Provident, soluta alias? Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum eius odit aliquid. Sunt labore quas facilis non, nobis qui quo natus molestiae debitis cum magni, dolores ratione, voluptates suscipit sit. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis tenetur libero unde sunt molestias ullam sapiente cupiditate nisi, itaque debitis aliquid ipsam asperiores adipisci tempore corporis numquam exercitationem error rem.</p>
+        </div>
+
     </main>
     
 
