--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 </a>
 
                 <nav class="navegacion">
+                    <a href="index.html" class="navegacion__enlace">Inicio</a>
                     <a href="nosotros.html" class="navegacion__enlace">Nosotros</a>
                     <a href="cursos.html" class="navegacion__enlace">Cursos</a>
                     <a href="contacto.html" class="navegacion__enlace">Contacto</a>
@@ -107,7 +108,7 @@
                     <p class="widget-curso__label">
                         Cupo: <span class="widget-curso__info">20</span>
                     </p>
-                    <a href="entrada.html" class="boton boton__secundario">
+                    <a href="cursos.html" class="boton boton__secundario">
                         Mas Información
 
                     </a>
@@ -124,7 +125,7 @@
                     <p class="widget-curso__label">
                         Cupo: <span class="widget-curso__info">20</span>
                     </p>
-                    <a href="entrada.html" class="boton boton__secundario">
+                    <a href="cursos.html" class="boton boton__secundario">
                         Mas Información
 
                     </a>
