--- a/cursos.html
+++ b/cursos.html
@@ -21,6 +21,7 @@
                 </a>
 
                 <nav class="navegacion">
+                    <a href="index.html" class="navegacion__enlace">Inicio</a>
                     <a href="nosotros.html" class="navegacion__enlace">Nosotros</a>
                     <a href="cursos.html" class="navegacion__enlace">Cursos</a>
                     <a href="contacto.html" class="navegacion__enlace">Contacto</a>
