agregamos lazy loading a las imagenes

--- a/contacto.html
+++ b/contacto.html
@@ -63,7 +63,7 @@
 
             <div class="campo">
                 <label class="campo__label"  for="mensaje">Mensaje</label>
-                <textarea class="campo__field campo__field--textarea" id="mensaje"></textarea>
+                <textarea class="campo__field campo__field--textarea" id="mensaje" placeholder="Escribe tu mensaje"></textarea>
             </div>
 
             <div class="campo">
