--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
             <article class="entrada">
                 <div class="entrada__img">
-                    <img src="/blogdecafe_inicio/img/blog1.jpg" alt="">
+                    <img  src="/blogdecafe_inicio/img/blog1.jpg" alt="imagen blog" loading="lazy">
                 </div>
                 <div class="entrada__contenido">
                     <h4 class="no-margin">
@@ -61,7 +61,7 @@
 
             <article class="entrada">
                 <div class="entrada__img">
-                    <img src="/blogdecafe_inicio/img/blog2.jpg" alt="">
+                    <img  src="/blogdecafe_inicio/img/blog2.jpg" alt="imagen blog" loading="lazy">
                 </div>
                 <div class="entrada__contenido">
                     <h4 class="no-margin">
@@ -76,7 +76,7 @@
 
             <article class="entrada">
                 <div class="entrada__img">
-                    <img src="/blogdecafe_inicio/img/blog3.jpg" alt="">
+                    <img  src="/blogdecafe_inicio/img/blog3.jpg" alt="imagen blog" loading="lazy">
                 </div>
                 <div class="entrada__contenido">
                     <h4 class="no-margin">
