--- a/index.html
+++ b/index.html
@@ -3,12 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- prefetch -->
+
+    <link rel="prefetch" href="nosotros.html" as="document">
+
+    <!-- Preload -->
+    <link rel="preload" href="/css/normalize.css" as="style">
     <link rel="stylesheet" href="/css/normalize.css">
+
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Open+Sans&family=PT+Sans:wght@400;700&display=swap" crossorigin="crossorigin" as="font">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
+
+    <link rel="preload" href="/css/style.css" as="style">
     <link rel="stylesheet" href="/css/style.css">
-    <title>Document</title>
+
+    <title>BlogdeCafé</title>
+
 </head>
 <body>
 
@@ -45,8 +60,8 @@
             <h3>Nuestro Blog</h3>
 
             <article class="entrada">
-                <div class="entrada__img">
-                    <img  src="/blogdecafe_inicio/img/blog1.jpg" alt="imagen blog" loading="lazy">
+                <div  class="entrada__img">
+                    <img loading="lazy"  src="/blogdecafe_inicio/img/blog1.jpg" alt="imagen blog" >
                 </div>
                 <div class="entrada__contenido">
                     <h4 class="no-margin">
@@ -61,7 +76,7 @@
 
             <article class="entrada">
                 <div class="entrada__img">
-                    <img  src="/blogdecafe_inicio/img/blog2.jpg" alt="imagen blog" loading="lazy">
+                    <img loading="lazy"  src="/blogdecafe_inicio/img/blog2.jpg" alt="imagen blog" >
                 </div>
                 <div class="entrada__contenido">
                     <h4 class="no-margin">
@@ -76,7 +91,7 @@
 
             <article class="entrada">
                 <div class="entrada__img">
-                    <img  src="/blogdecafe_inicio/img/blog3.jpg" alt="imagen blog" loading="lazy">
+                    <img loading="lazy" src="/blogdecafe_inicio/img/blog3.jpg" alt="imagen blog" >
                 </div>
                 <div class="entrada__contenido">
                     <h4 class="no-margin">
