mejoramiento y optimizacion del sitio

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Pagina Web de Blog de Café">
 
     <!-- prefetch -->
 
@@ -13,7 +14,7 @@
     <link rel="stylesheet" href="/css/normalize.css">
 
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com"">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Open+Sans&family=PT+Sans:wght@400;700&display=swap" crossorigin="crossorigin" as="font">
@@ -61,7 +62,11 @@
 
             <article class="entrada">
                 <div  class="entrada__img">
-                    <img loading="lazy"  src="/blogdecafe_inicio/img/blog1.jpg" alt="imagen blog" >
+                    <picture>
+                        <source loading="lazy" srcset="/blogdecafe_inicio/img/blog1.webp" type="imgage/webp">
+                        <img loading="lazy"  src="/blogdecafe_inicio/img/blog1.jpg" alt="imagen blog" >
+                    </picture>
+                    
                 </div>
                 <div class="entrada__contenido">
                     <h4 class="no-margin">
@@ -76,7 +81,10 @@
 
             <article class="entrada">
                 <div class="entrada__img">
-                    <img loading="lazy"  src="/blogdecafe_inicio/img/blog2.jpg" alt="imagen blog" >
+                    <picture>
+                        <source loading="lazy" srcset="/blogdecafe_inicio/img/blog2.webp" type="imgage/webp">
+                        <img loading="lazy"  src="/blogdecafe_inicio/img/blog2.jpg" alt="imagen blog" >
+                    </picture>
                 </div>
                 <div class="entrada__contenido">
                     <h4 class="no-margin">
@@ -91,7 +99,10 @@
 
             <article class="entrada">
                 <div class="entrada__img">
-                    <img loading="lazy" src="/blogdecafe_inicio/img/blog3.jpg" alt="imagen blog" >
+                    <picture>
+                        <source loading="lazy" srcset="/blogdecafe_inicio/img/blog3.webp" type="imgage/webp">
+                        <img loading="lazy"  src="/blogdecafe_inicio/img/blog3.jpg" alt="imagen blog" >
+                    </picture>
                 </div>
                 <div class="entrada__contenido">
                     <h4 class="no-margin">
@@ -165,7 +176,7 @@
         </div>
     </footer>
 
-
+    <script src="/js/modernizr.js"></script>
 
     
 </body>
